added SHOW_PROGRESS_BAR param

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "bcolors",
-        "tablefmt"
+        "tablefmt",
+        "tqdm"
     ],
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
